[package]
name = "oxidize-core"
version = "0.1.0"
authors = ["Steve Toth <steve@toths.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

